
 CHANGES
*********

v1.2.1 (xx-xx-2024):
- Fix shortnames
- Optimize URL detection
- Add Plugin support
- Add MySQL/MariaDB support

v1.2.0 (17-03-2024):
- Manage allowed relations
- Sidebar treeview
- Configuration to database
- Documentation accessibility
- Usability optimalization
- Add link on web address in text field
- Add property Password (encrypt)
- Add 2-Factor authentication (db users)

v1.1.6 (28-01-2024):
- Fix property visibility (frontend)

v1.1.5 (25-11-2023):
- Manage users in groups screen
- Add GUI hints
- Add unsaved changes notifications
- Add HTML entity coding on text inputs
- Full backend refactoring
- Fix versioning

v1.1.4 (12-10-2023):
- Full frontend refactoring
- Replace jsonForm plugin
- Revise loading

v1.1.3 (17-06-2023):
- Add groups with ACL's
- Fix type order
- Logs limited to SA
- Update documentation

v1.1.2 (10-05-2023):
- Polish module structure
- Replace datatables plugin
- Restructure tabs
- Update Build identifier (remove time)
- Polish source files (trim, permissions)
- Table sorting
- Add ChangeLog

v1.1.1 (01-04-2023):
- Comments & Documentation

v1.0.0 (31-03-2023):
- Initial commit